src/styling/qa.css
.qa_container {
  /* background-color: #f5f4ff;
  /* background-color: #e9eef3; */
  /* height: 100vh; */ 
}

.qa-search-add  {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  padding-top: 20px;
}

.tags {
  border-radius: 10px;
  background-color: lightgray;
  color: black;
  padding: 7px;
  margin-right: 10px;

}

.active_tag {
  background-color: #273654!important;
  color: #fff!important;
}
.sidebar_elem {
  height: 100px;
  max-height: 100px;
  width: 100%;
  max-width: 100%;
  min-width: 100%;
  overflow: hidden ;
}

.sidebar_elem_text {
  height: 70px;
  max-height: 70px;
  overflow: hidden ;
  width: 100%;
}

.sidebar_title {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.sidebar_date {
  font-size: 12px;
  align-self: flex-end;
  margin-left: auto;
}
.new-post {
  padding-top: 50px;
}

.err {
  color: red;
}

.question_card {
  overflow: hidden;
}

.bottomBarElems {
  display: flex;
  flex-direction: row;
}
/* .dashboard {
  width: 250px;
  max-width: 250px;
  min-width: 250px;
} */

/* .dashboard {
  background-color: #d3d3d3;
} */

